<resources>
    <string name="app_name">MUMWhere</string>
    <string name="location_permission_denied">LocationDisplayManager cannot run because location permission was denied</string>

    <string name="service_layer_url">http://sampleserver6.arcgisonline.com/arcgis/rest/services/DamageAssessment/FeatureServer/0</string>
    <string name="feature_added">Feature successfully added</string>

    <string name="error_cannot_add_to_feature_table">Cannot add a feature to this feature table</string>
    <string name="error_applying_edits">Exception applying edits on server: %s</string>

    <string name="scan_app_name">Qr App</string>
    <string name="scan_again">scan again</string>
    <string name="generate_qr">GENERATE QR</string>
    <string name="qr_value">qr value</string>
    <string name="scan_qr">SCAN QR</string>


    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="login_now">Login Now</string>
    <string name="don_t_remember_password">Don\'t Remember password?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="or">or</string>
    <string name="build_name">Name</string>
    <string name="build_desc">Description</string>


    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="login_menu">Login</string>
    <string name="route_menu">Route</string>
    <string name="about_menu">About Us</string>
    <string name="scan_menu">Scan QR</string>
    <string name="title_activity_map_and_details">MapAndDetailsActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="building_name">Building Name</string>

    <string name="stop">Stop</string>
    <string name="on">On</string>
    <string name="recenter">Re-Center</string>
    <string name="navigation">Navigation</string>
    <string name="compass">Compass</string>


    <string name="DarkGrayCanvasVector">DarkGrayCanvasVector</string>
    <string name="Imagery">Imagery</string>
    <string name="ImageryWithLabels">ImageryWithLabels</string>
    <string name="LightGrayCanvas">LightGrayCanvas</string>
    <string name="LightGrayCanvasVector">LightGrayCanvasVector</string>
    <string name="NationalGeographic">NationalGeographic</string>
    <string name="NavigationVector">NavigationVector</string>
    <string name="Oceans">Oceans</string>
    <string name="OpenStreetMap">OpenStreetMap</string>
    <string name="Streets">Streets</string>
    <string name="StreetsNightVector">StreetsNightVector</string>
    <string name="StreetsVector">StreetsVector</string>
    <string name="StreetsWithReliefVector">StreetsWithReliefVector</string>
    <string name="TerrainWithLabels">TerrainWithLabels</string>
    <string name="TerrainWithLabelsVector">TerrainWithLabelsVector</string>
    <string name="Topographic">Topographic</string>
    <string name="TopographicVector">TopographicVector</string>
    <string name="offices">Offices</string>
    <string name="services">Services</string>
    <string name="classroom">Classrooms</string>
    <string name="ok">Done</string>

    <string name="SERVICE_NAME">SERVICE NAME</string>
    <string name="SERVICE_DESC">SERVICE DESC</string>
    <string name="SERVICE_TYPE">SERVICE TYPE</string>
    <string name="BUILD_ID">BUILD ID</string>

    <string name="DESC">DESC</string>
    <string name="CURR_COURSE">CURRENT COURSE</string>
    <string name="CURR_INST_LOCATION">CURRENT INSTRUCTOR</string>

    <string name="addBuildingTitle"> ADD NEW BUILDING </string>

    <string name="HOURS">HOURS</string>
    <string name="EMAIL">EMAIL</string>
    <string name="PERSON_NAME">PERSON_NAME</string>
    <string name="NUMBER">NUMBER</string>
    <string name="CONTACT">CONTACT</string>
    <string name="CATEGORY">CATEGORY</string>
    <string name="logout_menu">Logout</string>


    <string name="appname">ACTVDemo</string>
    <string-array name="countries">
        <item>India</item>
        <item>Indonasia</item>
        <item>USA</item>
        <item>Asia</item>
        <item>Africa</item>
        <item>Siria</item>
        <item>Sri Lanka</item>
        <item>Canada</item>
        <item>Koria</item>
        <item>Island</item>
        <item>Bangaladesh</item>
        <item>Nepal</item>
    </string-array>


</resources>
