<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:text="@string/offices"
        android:textSize="35sp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/et_bg"
        android:hint="@string/PERSON_NAME"
        android:inputType="text"
        android:padding="16dp"
        android:textColorHint="@color/login_form_details" />

    <EditText
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/et_bg"
        android:hint="@string/CATEGORY"
        android:inputType="text"
        android:padding="16dp"
        android:textColorHint="@color/login_form_details" />

    <EditText
        android:id="@+id/office_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/et_bg"
        android:hint="@string/NUMBER"
        android:inputType="text"
        android:padding="16dp"
        android:textColorHint="@color/login_form_details" />

    <EditText
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/et_bg"
        android:hint="@string/CONTACT"
        android:inputType="text"
        android:padding="16dp"
        android:textColorHint="@color/login_form_details" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/et_bg"
        android:hint="@string/EMAIL"
        android:inputType="text"
        android:padding="16dp"
        android:textColorHint="@color/login_form_details" />

    <EditText
        android:id="@+id/hours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/et_bg"
        android:hint="@string/HOURS"
        android:inputType="text"
        android:padding="16dp"
        android:textColorHint="@color/login_form_details" />


    <Button
        android:id="@+id/addClassroom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_bg"
        android:onClick="login"
        android:padding="20dp"
        android:textAllCaps="false"
        android:textColor="@color/login_form_details_medium"
        android:text="Add" />

</LinearLayout>