<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="49dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="49dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:text="@string/services"
        android:textSize="35sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="49dp" />


    <EditText
        android:id="@+id/service_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/et_bg"
        android:hint="@string/SERVICE_NAME"
        android:inputType="text"
        android:padding="16dp"
        android:textColorHint="@color/login_form_details" />

    <EditText
        android:id="@+id/service_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/et_bg"
        android:hint="@string/SERVICE_DESC"
        android:inputType="text"
        android:padding="16dp"
        android:textColorHint="@color/login_form_details" />

    <EditText
        android:id="@+id/service_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/et_bg"
        android:hint="@string/SERVICE_TYPE"
        android:inputType="text"
        android:padding="16dp"
        android:textColorHint="@color/login_form_details" />


    <Button
        android:id="@+id/addClassroom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_bg"
        android:onClick="login"
        android:padding="20dp"
        android:text="@string/add"
        android:textAllCaps="false"
        android:textColor="@color/login_form_details_medium" />

</LinearLayout>