<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".MainActivity">

    <com.esri.arcgisruntime.mapping.view.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    </com.esri.arcgisruntime.mapping.view.MapView>


    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="22dp"
        android:background="#00000000"
        android:overlapAnchor="false"
        android:popupBackground="#00000000" />


    <AutoCompleteTextView
        android:id="@+id/actv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:focusable="auto"
        android:hint="Search Here"
        android:selectAllOnFocus="false"
        android:textColor="#00F5ECEC" />

    <Spinner
        android:id="@+id/basemap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="false"


        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="42dp"



        android:layout_alignParentRight="false"
        android:layout_marginStart="22dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="22dp"

        android:background="#00000000"
        android:gravity="center_horizontal|left|center_vertical"
        android:overlapAnchor="false"
        android:popupBackground="#00000000" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"

        android:layout_marginLeft="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="22dp"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/editOptions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:textStyle="bold|normal"
            android:textColor="#FFF"
            android:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold|normal"
                android:textColor="#FFF"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"
                android:text="Admin Tools"
                ></TextView>

            <RadioButton
                android:id="@+id/rbAddFeature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:textStyle="bold|normal"
                android:textSize="20sp"
                android:text="@string/add" />

            <RadioButton
                android:id="@+id/rbUpdateFeature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold|normal"
                android:textSize="20sp"
                android:textColor="#FFF"
                android:text="@string/update" />

            <RadioButton
                android:id="@+id/rbDeleteFeature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold|normal"
                android:textColor="#FFF"
                android:text="@string/delete" />

        </RadioGroup>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"/>
</RelativeLayout>